--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME="Filament Demo"
+APP_NAME="Painel Admin"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://demo.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
